# TuxVox

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  run.sh  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
data/: org.tuxvox.TuxVox.desktop  org.tuxvox.TuxVox.metainfo.xml
flatpak/: org.tuxvox.TuxVox.yml
scripts/: setup-uinput.sh
tests/: __init__.py  test_experimental.py  test_history.py  test_recorder_device_resolution.py  test_transcriber.py
tuxvox/: __init__.py  app_window.py  config.py  logger.py  main.py  onboarding.py  recorder.py  settings_window.py  system_info.py  transcriber.py
tuxvox/experimental/: __init__.py  chime.py  evdev_input.py  hotkey_manager.py  inline_typer.py  overlay_window.py  tray_icon.py  wayland_portal.py
