[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tuxvox"
version = "0.2.0"
description = "A stable, elegant, CPU-only speech-to-text application for Linux"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11"
authors = [
    {name = "TuxVox Contributors"},
]
keywords = ["speech-to-text", "whisper", "gtk4", "linux", "transcription"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "openai-whisper>=20231117",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
    "PyGObject>=3.44.0",
    "pynput>=1.7.6",
]

[project.scripts]
tuxvox = "tuxvox.main:main"

[project.urls]
Homepage = "https://github.com/CS-1313/TuxVox"
Repository = "https://github.com/CS-1313/TuxVox"
Issues = "https://github.com/CS-1313/TuxVox/issues"

[tool.setuptools.packages.find]
include = ["tuxvox*"]

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.flake8]
max-line-length = 99
extend-ignore = ["E203", "W503", "E402", "E501"]
